# autoria-data-parser

./: .dockerignore  .env.example  Dockerfile  README.md  celerybeat-schedule.dir  docker-compose.yml  gunicorn.conf.py  pyproject.toml  run_celery_beat.bat  run_celery_worker.bat
alembic/: env.py
alembic/versions/: 02e0c4e1b9dc_add_category_and_owner_to_link.py  0fc47dab5b9a_update_statusprocessed_enum_to_.py  12439b2e1310_link_add_field_last_process.py  166846a3ab32_add_path_to_images_to_cars.py  1b17742843f3_add_link_to_delete_and_link_to_create.py  1cf01ad7448e_add_status_enum_to_links_to_delete.py  3c26ec260c26_add_full_description_to_cars.py  793544cb3bc8_add_truck_car_id.py  7ddb8a534a42_add_model_to_cars.py  9f174f2b2fce_initial_tables.py  a1b2c3d4e5f6_add_parse_status_to_links.py  a8b9c0d1e2f3_add_failed_to_statusprocessed.py  b2c3d4e5f6a7_add_process_to_statusprocessed.py  c6a0bf5270c8_remove_car_type_from_cars_add_to_links.py  c9d0e1f2a3b4_add_active_to_statusprocessed.py  d4e5f6a7b8c9_add_last_recheck_at_to_links.py  e5f6a7b8c9d0_add_process_runs_table.py  f2deeb9d38a7_add_truck_car_id.py  f7a8b9c0d1e2_add_logs_to_process_runs.py
app/: celery_app.py
app/scraper/: constants.py  main.py  parse.py  scraper_service.py  search.py
celery/: config.py
crud/crud_link/: crud.py
database/: db.py  models.py
deploy/: nginx-fincar.conf.example
flask/: app.py
functions/: celery_tasks.py  constants.py  function.py  process_monitor.py
tasks/: config.py
web/: app.py
web/config/: settings.py
web/templates/: admin.html  base.html  (+7 more)
worker/: config.py
(+3 files in other folders)
